# BadUSB-Playground

./: .gitmodules  README.md
Ducky/: DTK_Downloader1.ps1  Readme.md
Ducky/USB-Rubber-Ducky.wiki/: USB-Rubber-Ducky-C:\Distruction-(CMD).md  stop-changing-the-desc.md
Ducky/USBRubberducky/execution/Win/AMS-BP/: AMSBP.ps1
Ducky/USBRubberducky/execution/Win/AnyExec/vbs/: test.vbs
Ducky/USBRubberducky/execution/Win/AnyExec/wsf/: payload.wsf
Ducky/USBRubberducky/execution/Win/UACBypass/: Program.cs  README.md  UACBypass.sln
Ducky/USBRubberducky/execution/Win/UACBypass/DLL Template/: prxdll_version.vcxproj
Ducky/USBRubberducky/prank/Unix-like/Linux/Anti-Browser/: Efftabsbasic.txt
Ducky/USBRubberducky/prank/Unix-like/Linux/Painbow/: Taste-The-PAINBOW.txt  lolshell.sh
Ducky/USBRubberducky/prank/Unix-like/Linux/xeyes/: quackVLC.txt
Ducky/USBRubberducky/prank/Win/Inverted_Desktop_Troll/V2/: Inverted_Desktop_Troll.ino
Ducky/USBRubberducky/prank/Win/Starup_Sound_Troll/: Wake_up_an_quack-long.txt
Misc/: Future_Ideas.md  Readme.md  Scripting-Resources.md
Misc/Cheat_Sheets/: Readme.md
Misc/Cheat_Sheets/DefaultCreds-cheat-sheet/: Readme.md
Misc/Scripting/Bash/bashfuck/: README.md
Misc/Scripting/py/: Readme.md
Misc/Web/Pasta/output/users/Madmouse/: Pastebin-0RPxfRYj.txt  (+136 more)
Misc/Win/BSOD/: bsodder.py
Misc/Win/BSOD/BSODMachine/: Program.cs
Misc/Win/BSOD/NotMe/: README.md
Misc/Win/BSOD/NotMe/NotMe_CPP/: CMakeLists.txt  CMakeSettings.json  CloseWindowStation.cpp  NtRaiseHardError.cpp  RaiseHardError.h  SetProcessIsCritical.cpp  ZwRaiseHardError.cpp
(+3 files in other folders)
